// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiPageTemplate fullHeight is rendered with noscroll 1`] = `
<div
  class="euiPage euiPageTemplate emotion-euiPage-row-grow-euiPageRestrictWidthStyles"
  style="min-height:460px"
>
  <div
    class="euiPageBody emotion-euiPageBody-euiPageRestrictWidthStyles"
  >
    <div
      class="euiPanel euiPanel--plain euiPageContent euiPageContent--borderRadiusNone emotion-euiPanel-grow-none-plain"
      role="main"
    >
      <div
        class="euiPageContentBody euiPageContentBody--paddingLarge euiPageContentBody--restrictWidth-default"
      />
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate fullHeight is rendered with true 1`] = `
<div
  class="euiPage euiPageTemplate emotion-euiPage-row-grow-euiPageRestrictWidthStyles"
  style="min-height:460px"
>
  <div
    class="euiPageBody emotion-euiPageBody-euiPageRestrictWidthStyles"
  >
    <div
      class="euiPanel euiPanel--plain euiPageContent euiPageContent--borderRadiusNone emotion-euiPanel-grow-none-plain"
      role="main"
    >
      <div
        class="euiPageContentBody euiPageContentBody--paddingLarge euiPageContentBody--restrictWidth-default"
      />
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate is rendered 1`] = `
<div
  aria-label="aria-label"
  class="euiPage euiPageTemplate testClass1 testClass2 emotion-euiPage-row-grow-euiPageRestrictWidthStyles"
  data-test-subj="test subject string"
  style="min-height:460px"
>
  <div
    class="euiPageBody emotion-euiPageBody-euiPageRestrictWidthStyles"
  >
    <div
      class="euiPanel euiPanel--plain euiPageContent euiPageContent--borderRadiusNone emotion-euiPanel-grow-none-plain"
      role="main"
    >
      <div
        class="euiPageContentBody euiPageContentBody--paddingLarge euiPageContentBody--restrictWidth-default"
      />
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate restrict width can be set to a custom number 1`] = `
<div
  class="euiPage euiPageTemplate emotion-euiPage-row-grow-euiPageRestrictWidthStyles"
  style="min-height:460px"
>
  <div
    class="euiPageBody emotion-euiPageBody-euiPageRestrictWidthStyles"
  >
    <div
      class="euiPanel euiPanel--plain euiPageContent euiPageContent--borderRadiusNone emotion-euiPanel-grow-none-plain"
      role="main"
    >
      <div
        class="euiPageContentBody euiPageContentBody--paddingLarge euiPageContentBody--restrictWidth-custom"
        style="max-width:1024px"
      />
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate restrict width can be turned off 1`] = `
<div
  class="euiPage euiPageTemplate emotion-euiPage-row-grow-euiPageRestrictWidthStyles"
  style="min-height:460px"
>
  <div
    class="euiPageBody emotion-euiPageBody-euiPageRestrictWidthStyles"
  >
    <div
      class="euiPanel euiPanel--plain euiPageContent euiPageContent--borderRadiusNone emotion-euiPanel-grow-none-plain"
      role="main"
    >
      <div
        class="euiPageContentBody euiPageContentBody--paddingLarge"
      />
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate template centeredBody is rendered 1`] = `
<div
  class="euiPage euiPageTemplate emotion-euiPage-row-grow-l-euiPageRestrictWidthStyles"
  style="min-height:460px"
>
  <div
    class="euiPageBody emotion-euiPageBody-euiPageRestrictWidthStyles"
  >
    <div
      class="euiPageBody emotion-euiPageBody-euiPageRestrictWidthStyles"
    >
      <div
        class="euiPanel euiPanel--plain euiPanel--paddingLarge euiPageContent euiPageContent--verticalCenter euiPageContent--horizontalCenter emotion-euiPanel-grow-m-l-plain-hasShadow"
        role="main"
      >
        <div
          class="euiPageContentBody euiPageContentBody--restrictWidth-default"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate template centeredBody is rendered with pageBodyProps 1`] = `
<div
  class="euiPage euiPageTemplate emotion-euiPage-row-grow-l-euiPageRestrictWidthStyles"
  style="min-height:460px"
>
  <div
    aria-label="aria-label"
    class="euiPageBody testClass1 testClass2 emotion-euiPageBody-euiPageRestrictWidthStyles"
    data-test-subj="test subject string"
  >
    <div
      class="euiPageBody emotion-euiPageBody-euiPageRestrictWidthStyles"
    >
      <div
        class="euiPanel euiPanel--plain euiPanel--paddingLarge euiPageContent euiPageContent--verticalCenter euiPageContent--horizontalCenter emotion-euiPanel-grow-m-l-plain-hasShadow"
        role="main"
      >
        <div
          class="euiPageContentBody euiPageContentBody--restrictWidth-default"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate template centeredBody is rendered with pageContentBodyProps 1`] = `
<div
  class="euiPage euiPageTemplate emotion-euiPage-row-grow-l-euiPageRestrictWidthStyles"
  style="min-height:460px"
>
  <div
    class="euiPageBody emotion-euiPageBody-euiPageRestrictWidthStyles"
  >
    <div
      class="euiPageBody emotion-euiPageBody-euiPageRestrictWidthStyles"
    >
      <div
        class="euiPanel euiPanel--plain euiPanel--paddingLarge euiPageContent euiPageContent--verticalCenter euiPageContent--horizontalCenter emotion-euiPanel-grow-m-l-plain-hasShadow"
        role="main"
      >
        <div
          aria-label="aria-label"
          class="euiPageContentBody euiPageContentBody--restrictWidth-default testClass1 testClass2"
          data-test-subj="test subject string"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate template centeredBody is rendered with pageContentProps 1`] = `
<div
  class="euiPage euiPageTemplate emotion-euiPage-row-grow-l-euiPageRestrictWidthStyles"
  style="min-height:460px"
>
  <div
    class="euiPageBody emotion-euiPageBody-euiPageRestrictWidthStyles"
  >
    <div
      class="euiPageBody emotion-euiPageBody-euiPageRestrictWidthStyles"
    >
      <div
        aria-label="aria-label"
        class="euiPanel euiPanel--plain euiPanel--paddingLarge euiPageContent euiPageContent--verticalCenter euiPageContent--horizontalCenter testClass1 testClass2 emotion-euiPanel-grow-m-l-plain-hasShadow"
        data-test-subj="test subject string"
        role="main"
      >
        <div
          class="euiPageContentBody euiPageContentBody--restrictWidth-default"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate template centeredBody is rendered with pageHeader 1`] = `
<div
  class="euiPage euiPageTemplate emotion-euiPage-row-grow-l-euiPageRestrictWidthStyles"
  style="min-height:460px"
>
  <div
    class="euiPageBody emotion-euiPageBody-euiPageRestrictWidthStyles"
  >
    <header
      aria-label="aria-label"
      class="euiPageHeader testClass1 testClass2 emotion-euiPageHeader"
      data-test-subj="test subject string"
      title="Page title"
    >
      <div
        class="euiPageHeaderContent emotion-euiPageHeaderContent-border-l"
      >
        <div
          class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow euiFlexGroup--responsive euiPageHeaderContent__top"
        >
          <div
            class="euiFlexItem"
          />
        </div>
      </div>
    </header>
    <div
      class="euiPageBody emotion-euiPageBody-euiPageRestrictWidthStyles"
    >
      <div
        class="euiPanel euiPanel--plain euiPanel--paddingLarge euiPageContent euiPageContent--verticalCenter euiPageContent--horizontalCenter emotion-euiPanel-grow-m-l-plain-hasShadow"
        role="main"
      >
        <div
          class="euiPageContentBody euiPageContentBody--restrictWidth-default"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate template centeredBody minHeight is rendered 1`] = `
<div
  class="euiPage euiPageTemplate emotion-euiPage-row-grow-l-euiPageRestrictWidthStyles"
  style="min-height:40vh"
>
  <div
    class="euiPageBody emotion-euiPageBody-euiPageRestrictWidthStyles"
  >
    <div
      class="euiPageBody emotion-euiPageBody-euiPageRestrictWidthStyles"
    >
      <div
        class="euiPanel euiPanel--plain euiPanel--paddingLarge euiPageContent euiPageContent--verticalCenter euiPageContent--horizontalCenter emotion-euiPanel-grow-m-l-plain-hasShadow"
        role="main"
      >
        <div
          class="euiPageContentBody euiPageContentBody--restrictWidth-default"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate template centeredBody paddingSize is rendered 1`] = `
<div
  class="euiPage euiPageTemplate emotion-euiPage-row-grow-euiPageRestrictWidthStyles"
  style="min-height:460px"
>
  <div
    class="euiPageBody emotion-euiPageBody-euiPageRestrictWidthStyles"
  >
    <div
      class="euiPageBody emotion-euiPageBody-euiPageRestrictWidthStyles"
    >
      <div
        class="euiPanel euiPanel--plain euiPageContent euiPageContent--verticalCenter euiPageContent--horizontalCenter emotion-euiPanel-grow-m-plain-hasShadow"
        role="main"
      >
        <div
          class="euiPageContentBody euiPageContentBody--restrictWidth-default"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate template centeredBody style is rendered 1`] = `
<div
  class="euiPage euiPageTemplate emotion-euiPage-row-grow-l-euiPageRestrictWidthStyles"
  style="min-height:460px;max-height:100vh"
>
  <div
    class="euiPageBody emotion-euiPageBody-euiPageRestrictWidthStyles"
  >
    <div
      class="euiPageBody emotion-euiPageBody-euiPageRestrictWidthStyles"
    >
      <div
        class="euiPanel euiPanel--plain euiPanel--paddingLarge euiPageContent euiPageContent--verticalCenter euiPageContent--horizontalCenter emotion-euiPanel-grow-m-l-plain-hasShadow"
        role="main"
      >
        <div
          class="euiPageContentBody euiPageContentBody--restrictWidth-default"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate template centeredBody with pageSideBar is rendered 1`] = `
<div
  class="euiPage euiPageTemplate emotion-euiPage-row-grow-euiPageRestrictWidthStyles"
  style="min-height:460px"
>
  <div
    class="euiPageSideBar euiPageSideBar--paddingLarge euiPageSideBar--sticky"
  >
    Side Bar
  </div>
  <div
    class="euiPageBody emotion-euiPageBody-l-euiPageRestrictWidthStyles"
  >
    <div
      class="euiPanel euiPanel--plain euiPanel--paddingLarge euiPageContent euiPageContent--verticalCenter euiPageContent--horizontalCenter emotion-euiPanel-grow-m-l-plain-hasShadow"
      role="main"
    >
      <div
        class="euiPageContentBody euiPageContentBody--restrictWidth-default"
      />
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate template centeredBody with pageSideBar is rendered with pageSideBarProps 1`] = `
<div
  class="euiPage euiPageTemplate emotion-euiPage-row-grow-euiPageRestrictWidthStyles"
  style="min-height:460px"
>
  <div
    aria-label="aria-label"
    class="euiPageSideBar euiPageSideBar--paddingLarge euiPageSideBar--sticky testClass1 testClass2"
    data-test-subj="test subject string"
  >
    Side Bar
  </div>
  <div
    class="euiPageBody emotion-euiPageBody-l-euiPageRestrictWidthStyles"
  >
    <div
      class="euiPanel euiPanel--plain euiPanel--paddingLarge euiPageContent euiPageContent--verticalCenter euiPageContent--horizontalCenter emotion-euiPanel-grow-m-l-plain-hasShadow"
      role="main"
    >
      <div
        class="euiPageContentBody euiPageContentBody--restrictWidth-default"
      />
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate template centeredContent is rendered 1`] = `
<div
  class="euiPage euiPageTemplate emotion-euiPage-row-grow-euiPageRestrictWidthStyles"
  style="min-height:460px"
>
  <div
    class="euiPageBody emotion-euiPageBody-euiPageRestrictWidthStyles"
  >
    <div
      class="euiPanel euiPanel--plain euiPanel--paddingLarge euiPageContent euiPageContent--borderRadiusNone emotion-euiPanel-grow-none-l-plain"
      style="display:flex"
    >
      <div
        class="euiPanel euiPanel--subdued euiPanel--paddingLarge euiPageContent euiPageContent--verticalCenter euiPageContent--horizontalCenter emotion-euiPanel-grow-m-l-subdued"
        role="main"
      >
        <div
          class="euiPageContentBody euiPageContentBody--restrictWidth-default"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate template centeredContent is rendered with pageBodyProps 1`] = `
<div
  class="euiPage euiPageTemplate emotion-euiPage-row-grow-euiPageRestrictWidthStyles"
  style="min-height:460px"
>
  <div
    aria-label="aria-label"
    class="euiPageBody testClass1 testClass2 emotion-euiPageBody-euiPageRestrictWidthStyles"
    data-test-subj="test subject string"
  >
    <div
      class="euiPanel euiPanel--plain euiPanel--paddingLarge euiPageContent euiPageContent--borderRadiusNone emotion-euiPanel-grow-none-l-plain"
      style="display:flex"
    >
      <div
        class="euiPanel euiPanel--subdued euiPanel--paddingLarge euiPageContent euiPageContent--verticalCenter euiPageContent--horizontalCenter emotion-euiPanel-grow-m-l-subdued"
        role="main"
      >
        <div
          class="euiPageContentBody euiPageContentBody--restrictWidth-default"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate template centeredContent is rendered with pageContentBodyProps 1`] = `
<div
  class="euiPage euiPageTemplate emotion-euiPage-row-grow-euiPageRestrictWidthStyles"
  style="min-height:460px"
>
  <div
    class="euiPageBody emotion-euiPageBody-euiPageRestrictWidthStyles"
  >
    <div
      class="euiPanel euiPanel--plain euiPanel--paddingLarge euiPageContent euiPageContent--borderRadiusNone emotion-euiPanel-grow-none-l-plain"
      style="display:flex"
    >
      <div
        class="euiPanel euiPanel--subdued euiPanel--paddingLarge euiPageContent euiPageContent--verticalCenter euiPageContent--horizontalCenter emotion-euiPanel-grow-m-l-subdued"
        role="main"
      >
        <div
          aria-label="aria-label"
          class="euiPageContentBody euiPageContentBody--restrictWidth-default testClass1 testClass2"
          data-test-subj="test subject string"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate template centeredContent is rendered with pageContentProps 1`] = `
<div
  class="euiPage euiPageTemplate emotion-euiPage-row-grow-euiPageRestrictWidthStyles"
  style="min-height:460px"
>
  <div
    class="euiPageBody emotion-euiPageBody-euiPageRestrictWidthStyles"
  >
    <div
      class="euiPanel euiPanel--plain euiPanel--paddingLarge euiPageContent euiPageContent--borderRadiusNone emotion-euiPanel-grow-none-l-plain"
      style="display:flex"
    >
      <div
        aria-label="aria-label"
        class="euiPanel euiPanel--subdued euiPanel--paddingLarge euiPageContent euiPageContent--verticalCenter euiPageContent--horizontalCenter testClass1 testClass2 emotion-euiPanel-grow-m-l-subdued"
        data-test-subj="test subject string"
        role="main"
      >
        <div
          class="euiPageContentBody euiPageContentBody--restrictWidth-default"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate template centeredContent is rendered with pageHeader 1`] = `
<div
  class="euiPage euiPageTemplate emotion-euiPage-row-grow-euiPageRestrictWidthStyles"
  style="min-height:460px"
>
  <div
    class="euiPageBody emotion-euiPageBody-euiPageRestrictWidthStyles"
  >
    <header
      aria-label="aria-label"
      class="euiPageHeader testClass1 testClass2 emotion-euiPageHeader-l"
      data-test-subj="test subject string"
      title="Page title"
    >
      <div
        class="euiPageHeaderContent emotion-euiPageHeaderContent-l"
        style="max-width:1200px"
      >
        <div
          class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow euiFlexGroup--responsive euiPageHeaderContent__top"
        >
          <div
            class="euiFlexItem"
          />
        </div>
      </div>
    </header>
    <div
      class="euiPanel euiPanel--plain euiPanel--paddingLarge euiPageContent euiPageContent--borderRadiusNone emotion-euiPanel-grow-none-l-plain"
      style="display:flex"
    >
      <div
        class="euiPanel euiPanel--subdued euiPanel--paddingLarge euiPageContent euiPageContent--verticalCenter euiPageContent--horizontalCenter emotion-euiPanel-grow-m-l-subdued"
        role="main"
      >
        <div
          class="euiPageContentBody euiPageContentBody--restrictWidth-default"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate template centeredContent minHeight is rendered 1`] = `
<div
  class="euiPage euiPageTemplate emotion-euiPage-row-grow-euiPageRestrictWidthStyles"
  style="min-height:40vh"
>
  <div
    class="euiPageBody emotion-euiPageBody-euiPageRestrictWidthStyles"
  >
    <div
      class="euiPanel euiPanel--plain euiPanel--paddingLarge euiPageContent euiPageContent--borderRadiusNone emotion-euiPanel-grow-none-l-plain"
      style="display:flex"
    >
      <div
        class="euiPanel euiPanel--subdued euiPanel--paddingLarge euiPageContent euiPageContent--verticalCenter euiPageContent--horizontalCenter emotion-euiPanel-grow-m-l-subdued"
        role="main"
      >
        <div
          class="euiPageContentBody euiPageContentBody--restrictWidth-default"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate template centeredContent paddingSize is rendered 1`] = `
<div
  class="euiPage euiPageTemplate emotion-euiPage-row-grow-euiPageRestrictWidthStyles"
  style="min-height:460px"
>
  <div
    class="euiPageBody emotion-euiPageBody-euiPageRestrictWidthStyles"
  >
    <div
      class="euiPanel euiPanel--plain euiPageContent euiPageContent--borderRadiusNone emotion-euiPanel-grow-none-plain"
      style="display:flex"
    >
      <div
        class="euiPanel euiPanel--subdued euiPageContent euiPageContent--verticalCenter euiPageContent--horizontalCenter emotion-euiPanel-grow-m-subdued"
        role="main"
      >
        <div
          class="euiPageContentBody euiPageContentBody--restrictWidth-default"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate template centeredContent style is rendered 1`] = `
<div
  class="euiPage euiPageTemplate emotion-euiPage-row-grow-euiPageRestrictWidthStyles"
  style="min-height:460px;max-height:100vh"
>
  <div
    class="euiPageBody emotion-euiPageBody-euiPageRestrictWidthStyles"
  >
    <div
      class="euiPanel euiPanel--plain euiPanel--paddingLarge euiPageContent euiPageContent--borderRadiusNone emotion-euiPanel-grow-none-l-plain"
      style="display:flex"
    >
      <div
        class="euiPanel euiPanel--subdued euiPanel--paddingLarge euiPageContent euiPageContent--verticalCenter euiPageContent--horizontalCenter emotion-euiPanel-grow-m-l-subdued"
        role="main"
      >
        <div
          class="euiPageContentBody euiPageContentBody--restrictWidth-default"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate template centeredContent with pageSideBar is rendered 1`] = `
<div
  class="euiPage euiPageTemplate emotion-euiPage-row-grow-euiPageRestrictWidthStyles"
  style="min-height:460px"
>
  <div
    class="euiPageSideBar euiPageSideBar--paddingLarge euiPageSideBar--sticky"
  >
    Side Bar
  </div>
  <div
    class="euiPanel euiPanel--plain euiPanel--paddingLarge euiPageBody emotion-euiPanel-grow-none-l-plain-hasShadow-euiPageBody-euiPageRestrictWidthStyles"
  >
    <div
      class="euiPanel euiPanel--subdued euiPanel--paddingLarge euiPageContent euiPageContent--verticalCenter euiPageContent--horizontalCenter emotion-euiPanel-grow-m-l-subdued"
      role="main"
    >
      <div
        class="euiPageContentBody euiPageContentBody--restrictWidth-default"
      />
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate template centeredContent with pageSideBar is rendered with pageSideBarProps 1`] = `
<div
  class="euiPage euiPageTemplate emotion-euiPage-row-grow-euiPageRestrictWidthStyles"
  style="min-height:460px"
>
  <div
    aria-label="aria-label"
    class="euiPageSideBar euiPageSideBar--paddingLarge euiPageSideBar--sticky testClass1 testClass2"
    data-test-subj="test subject string"
  >
    Side Bar
  </div>
  <div
    class="euiPanel euiPanel--plain euiPanel--paddingLarge euiPageBody emotion-euiPanel-grow-none-l-plain-hasShadow-euiPageBody-euiPageRestrictWidthStyles"
  >
    <div
      class="euiPanel euiPanel--subdued euiPanel--paddingLarge euiPageContent euiPageContent--verticalCenter euiPageContent--horizontalCenter emotion-euiPanel-grow-m-l-subdued"
      role="main"
    >
      <div
        class="euiPageContentBody euiPageContentBody--restrictWidth-default"
      />
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate template default is rendered 1`] = `
<div
  class="euiPage euiPageTemplate emotion-euiPage-row-grow-euiPageRestrictWidthStyles"
  style="min-height:460px"
>
  <div
    class="euiPageBody emotion-euiPageBody-euiPageRestrictWidthStyles"
  >
    <div
      class="euiPanel euiPanel--plain euiPageContent euiPageContent--borderRadiusNone emotion-euiPanel-grow-none-plain"
      role="main"
    >
      <div
        class="euiPageContentBody euiPageContentBody--paddingLarge euiPageContentBody--restrictWidth-default"
      />
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate template default is rendered with pageBodyProps 1`] = `
<div
  class="euiPage euiPageTemplate emotion-euiPage-row-grow-euiPageRestrictWidthStyles"
  style="min-height:460px"
>
  <div
    aria-label="aria-label"
    class="euiPageBody testClass1 testClass2 emotion-euiPageBody-euiPageRestrictWidthStyles"
    data-test-subj="test subject string"
  >
    <div
      class="euiPanel euiPanel--plain euiPageContent euiPageContent--borderRadiusNone emotion-euiPanel-grow-none-plain"
      role="main"
    >
      <div
        class="euiPageContentBody euiPageContentBody--paddingLarge euiPageContentBody--restrictWidth-default"
      />
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate template default is rendered with pageContentBodyProps 1`] = `
<div
  class="euiPage euiPageTemplate emotion-euiPage-row-grow-euiPageRestrictWidthStyles"
  style="min-height:460px"
>
  <div
    class="euiPageBody emotion-euiPageBody-euiPageRestrictWidthStyles"
  >
    <div
      class="euiPanel euiPanel--plain euiPageContent euiPageContent--borderRadiusNone emotion-euiPanel-grow-none-plain"
      role="main"
    >
      <div
        aria-label="aria-label"
        class="euiPageContentBody euiPageContentBody--paddingLarge euiPageContentBody--restrictWidth-default testClass1 testClass2"
        data-test-subj="test subject string"
      />
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate template default is rendered with pageContentProps 1`] = `
<div
  class="euiPage euiPageTemplate emotion-euiPage-row-grow-euiPageRestrictWidthStyles"
  style="min-height:460px"
>
  <div
    class="euiPageBody emotion-euiPageBody-euiPageRestrictWidthStyles"
  >
    <div
      aria-label="aria-label"
      class="euiPanel euiPanel--plain euiPageContent euiPageContent--borderRadiusNone testClass1 testClass2 emotion-euiPanel-grow-none-plain"
      data-test-subj="test subject string"
      role="main"
    >
      <div
        class="euiPageContentBody euiPageContentBody--paddingLarge euiPageContentBody--restrictWidth-default"
      />
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate template default is rendered with pageHeader 1`] = `
<div
  class="euiPage euiPageTemplate emotion-euiPage-row-grow-euiPageRestrictWidthStyles"
  style="min-height:460px"
>
  <div
    class="euiPageBody emotion-euiPageBody-euiPageRestrictWidthStyles"
  >
    <header
      aria-label="aria-label"
      class="euiPageHeader testClass1 testClass2 emotion-euiPageHeader-l"
      data-test-subj="test subject string"
      title="Page title"
    >
      <div
        class="euiPageHeaderContent emotion-euiPageHeaderContent-l"
        style="max-width:1200px"
      >
        <div
          class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow euiFlexGroup--responsive euiPageHeaderContent__top"
        >
          <div
            class="euiFlexItem"
          />
        </div>
      </div>
    </header>
    <div
      class="euiPanel euiPanel--plain euiPageContent euiPageContent--borderRadiusNone emotion-euiPanel-grow-none-plain"
      role="main"
    >
      <div
        class="euiPageContentBody euiPageContentBody--paddingLarge euiPageContentBody--restrictWidth-default"
      />
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate template default minHeight is rendered 1`] = `
<div
  class="euiPage euiPageTemplate emotion-euiPage-row-grow-euiPageRestrictWidthStyles"
  style="min-height:40vh"
>
  <div
    class="euiPageBody emotion-euiPageBody-euiPageRestrictWidthStyles"
  >
    <div
      class="euiPanel euiPanel--plain euiPageContent euiPageContent--borderRadiusNone emotion-euiPanel-grow-none-plain"
      role="main"
    >
      <div
        class="euiPageContentBody euiPageContentBody--paddingLarge euiPageContentBody--restrictWidth-default"
      />
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate template default paddingSize is rendered 1`] = `
<div
  class="euiPage euiPageTemplate emotion-euiPage-row-grow-euiPageRestrictWidthStyles"
  style="min-height:460px"
>
  <div
    class="euiPageBody emotion-euiPageBody-euiPageRestrictWidthStyles"
  >
    <div
      class="euiPanel euiPanel--plain euiPageContent euiPageContent--borderRadiusNone emotion-euiPanel-grow-none-plain"
      role="main"
    >
      <div
        class="euiPageContentBody euiPageContentBody--restrictWidth-default"
      />
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate template default style is rendered 1`] = `
<div
  class="euiPage euiPageTemplate emotion-euiPage-row-grow-euiPageRestrictWidthStyles"
  style="min-height:460px;max-height:100vh"
>
  <div
    class="euiPageBody emotion-euiPageBody-euiPageRestrictWidthStyles"
  >
    <div
      class="euiPanel euiPanel--plain euiPageContent euiPageContent--borderRadiusNone emotion-euiPanel-grow-none-plain"
      role="main"
    >
      <div
        class="euiPageContentBody euiPageContentBody--paddingLarge euiPageContentBody--restrictWidth-default"
      />
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate template default with pageSideBar is rendered 1`] = `
<div
  class="euiPage euiPageTemplate emotion-euiPage-row-grow-euiPageRestrictWidthStyles"
  style="min-height:460px"
>
  <div
    class="euiPageSideBar euiPageSideBar--paddingLarge euiPageSideBar--sticky"
  >
    Side Bar
  </div>
  <div
    class="euiPanel euiPanel--plain euiPageBody emotion-euiPanel-grow-none-plain-hasShadow-euiPageBody-euiPageRestrictWidthStyles"
  >
    <div
      class="euiPageBody emotion-euiPageBody-l-euiPageRestrictWidthStyles"
    >
      <div
        class="euiPanel euiPanel--transparent euiPageContent euiPageContent--borderRadiusNone emotion-euiPanel-grow-none-transparent"
        role="main"
      >
        <div
          class="euiPageContentBody euiPageContentBody--restrictWidth-default"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate template default with pageSideBar is rendered with pageSideBarProps 1`] = `
<div
  class="euiPage euiPageTemplate emotion-euiPage-row-grow-euiPageRestrictWidthStyles"
  style="min-height:460px"
>
  <div
    aria-label="aria-label"
    class="euiPageSideBar euiPageSideBar--paddingLarge euiPageSideBar--sticky testClass1 testClass2"
    data-test-subj="test subject string"
  >
    Side Bar
  </div>
  <div
    class="euiPanel euiPanel--plain euiPageBody emotion-euiPanel-grow-none-plain-hasShadow-euiPageBody-euiPageRestrictWidthStyles"
  >
    <div
      class="euiPageBody emotion-euiPageBody-l-euiPageRestrictWidthStyles"
    >
      <div
        class="euiPanel euiPanel--transparent euiPageContent euiPageContent--borderRadiusNone emotion-euiPanel-grow-none-transparent"
        role="main"
      >
        <div
          class="euiPageContentBody euiPageContentBody--restrictWidth-default"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate template empty is rendered 1`] = `
<div
  class="euiPage euiPageTemplate emotion-euiPage-row-grow-l-euiPageRestrictWidthStyles"
  style="min-height:460px"
>
  <div
    class="euiPageBody emotion-euiPageBody-euiPageRestrictWidthStyles"
  >
    <div
      class="euiPanel euiPanel--transparent euiPageContent euiPageContent--borderRadiusNone emotion-euiPanel-grow-none-transparent"
      role="main"
    >
      <div
        class="euiPageContentBody"
      />
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate template empty is rendered with pageBodyProps 1`] = `
<div
  class="euiPage euiPageTemplate emotion-euiPage-row-grow-l-euiPageRestrictWidthStyles"
  style="min-height:460px"
>
  <div
    aria-label="aria-label"
    class="euiPageBody testClass1 testClass2 emotion-euiPageBody-euiPageRestrictWidthStyles"
    data-test-subj="test subject string"
  >
    <div
      class="euiPanel euiPanel--transparent euiPageContent euiPageContent--borderRadiusNone emotion-euiPanel-grow-none-transparent"
      role="main"
    >
      <div
        class="euiPageContentBody"
      />
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate template empty is rendered with pageContentBodyProps 1`] = `
<div
  class="euiPage euiPageTemplate emotion-euiPage-row-grow-l-euiPageRestrictWidthStyles"
  style="min-height:460px"
>
  <div
    class="euiPageBody emotion-euiPageBody-euiPageRestrictWidthStyles"
  >
    <div
      class="euiPanel euiPanel--transparent euiPageContent euiPageContent--borderRadiusNone emotion-euiPanel-grow-none-transparent"
      role="main"
    >
      <div
        aria-label="aria-label"
        class="euiPageContentBody testClass1 testClass2"
        data-test-subj="test subject string"
      />
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate template empty is rendered with pageContentProps 1`] = `
<div
  class="euiPage euiPageTemplate emotion-euiPage-row-grow-l-euiPageRestrictWidthStyles"
  style="min-height:460px"
>
  <div
    class="euiPageBody emotion-euiPageBody-euiPageRestrictWidthStyles"
  >
    <div
      aria-label="aria-label"
      class="euiPanel euiPanel--transparent euiPageContent euiPageContent--borderRadiusNone testClass1 testClass2 emotion-euiPanel-grow-none-transparent"
      data-test-subj="test subject string"
      role="main"
    >
      <div
        class="euiPageContentBody"
      />
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate template empty is rendered with pageHeader 1`] = `
<div
  class="euiPage euiPageTemplate emotion-euiPage-row-grow-l-euiPageRestrictWidthStyles"
  style="min-height:460px"
>
  <div
    class="euiPageBody emotion-euiPageBody-euiPageRestrictWidthStyles"
  >
    <header
      aria-label="aria-label"
      class="euiPageHeader testClass1 testClass2 emotion-euiPageHeader"
      data-test-subj="test subject string"
      title="Page title"
    >
      <div
        class="euiPageHeaderContent emotion-euiPageHeaderContent-border-l"
      >
        <div
          class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow euiFlexGroup--responsive euiPageHeaderContent__top"
        >
          <div
            class="euiFlexItem"
          />
        </div>
      </div>
    </header>
    <div
      class="euiPanel euiPanel--transparent euiPageContent euiPageContent--borderRadiusNone emotion-euiPanel-grow-none-transparent"
      role="main"
    >
      <div
        class="euiPageContentBody"
      />
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate template empty minHeight is rendered 1`] = `
<div
  class="euiPage euiPageTemplate emotion-euiPage-row-grow-l-euiPageRestrictWidthStyles"
  style="min-height:40vh"
>
  <div
    class="euiPageBody emotion-euiPageBody-euiPageRestrictWidthStyles"
  >
    <div
      class="euiPanel euiPanel--transparent euiPageContent euiPageContent--borderRadiusNone emotion-euiPanel-grow-none-transparent"
      role="main"
    >
      <div
        class="euiPageContentBody"
      />
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate template empty paddingSize is rendered 1`] = `
<div
  class="euiPage euiPageTemplate emotion-euiPage-row-grow-euiPageRestrictWidthStyles"
  style="min-height:460px"
>
  <div
    class="euiPageBody emotion-euiPageBody-euiPageRestrictWidthStyles"
  >
    <div
      class="euiPanel euiPanel--transparent euiPageContent euiPageContent--borderRadiusNone emotion-euiPanel-grow-none-transparent"
      role="main"
    >
      <div
        class="euiPageContentBody"
      />
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate template empty style is rendered 1`] = `
<div
  class="euiPage euiPageTemplate emotion-euiPage-row-grow-l-euiPageRestrictWidthStyles"
  style="min-height:460px;max-height:100vh"
>
  <div
    class="euiPageBody emotion-euiPageBody-euiPageRestrictWidthStyles"
  >
    <div
      class="euiPanel euiPanel--transparent euiPageContent euiPageContent--borderRadiusNone emotion-euiPanel-grow-none-transparent"
      role="main"
    >
      <div
        class="euiPageContentBody"
      />
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate template empty with pageSideBar is rendered 1`] = `
<div
  class="euiPage euiPageTemplate emotion-euiPage-row-grow-euiPageRestrictWidthStyles"
  style="min-height:460px"
>
  <div
    class="euiPageSideBar euiPageSideBar--paddingLarge euiPageSideBar--sticky"
  >
    Side Bar
  </div>
  <div
    class="euiPageBody emotion-euiPageBody-l-euiPageRestrictWidthStyles"
  >
    <div
      class="euiPanel euiPanel--transparent euiPageContent euiPageContent--borderRadiusNone emotion-euiPanel-grow-none-transparent"
      role="main"
    >
      <div
        class="euiPageContentBody euiPageContentBody--restrictWidth-default"
      />
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate template empty with pageSideBar is rendered with pageSideBarProps 1`] = `
<div
  class="euiPage euiPageTemplate emotion-euiPage-row-grow-euiPageRestrictWidthStyles"
  style="min-height:460px"
>
  <div
    aria-label="aria-label"
    class="euiPageSideBar euiPageSideBar--paddingLarge euiPageSideBar--sticky testClass1 testClass2"
    data-test-subj="test subject string"
  >
    Side Bar
  </div>
  <div
    class="euiPageBody emotion-euiPageBody-l-euiPageRestrictWidthStyles"
  >
    <div
      class="euiPanel euiPanel--transparent euiPageContent euiPageContent--borderRadiusNone emotion-euiPanel-grow-none-transparent"
      role="main"
    >
      <div
        class="euiPageContentBody euiPageContentBody--restrictWidth-default"
      />
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate with bottomBar is rendered 1`] = `
<div
  class="euiPage euiPageTemplate emotion-euiPage-row-grow-euiPageRestrictWidthStyles"
  style="min-height:460px"
>
  <div
    class="euiPageBody emotion-euiPageBody-euiPageRestrictWidthStyles"
  >
    <div
      class="euiPanel euiPanel--plain euiPageContent euiPageContent--borderRadiusNone emotion-euiPanel-grow-none-plain"
      role="main"
    >
      <div
        class="euiPageContentBody euiPageContentBody--paddingLarge euiPageContentBody--restrictWidth-default"
      />
    </div>
    <section
      aria-label="Page level controls"
      class="euiBottomBar euiBottomBar--sticky emotion-euiBottomBar-sticky"
      style="left:0;right:0;bottom:0"
    >
      <h2
        class="emotion-euiScreenReaderOnly"
      >
        Page level controls
      </h2>
      <div
        class="euiPageContentBody euiPageContentBody--restrictWidth-default"
      >
        Bottom Bar
      </div>
    </section>
    <p
      aria-live="assertive"
      class="emotion-euiScreenReaderOnly"
    >
      There is a new region landmark with page level controls at the end of the document.
    </p>
  </div>
</div>
`;
